fixed background wrapping and gap

--- a/site/public/styles.css
+++ b/site/public/styles.css
@@ -4,6 +4,7 @@ body
     margin: 0;
     background-image: url(cat.jpg);
     background-attachment: fixed;
+    background-size: 100%;
 }
 
 .header
@@ -58,13 +59,26 @@ body
     box-sizing: border-box;
 }
 
-#world-map-div
+/* the div */
+#world-container
 {
     /* border: 0; */
     /* margin: 0; */
-    /* width: 100%; */
+    width: 100%;
+    /* min-width: 250px; */
+    /* display: inline-block; */
+    padding: 0;
+    margin: 0;
+
+    background-color: black;
     /* margin-bottom:0px; */
     /* display: block; */
+}
+
+#world-container img
+{
+    width: 100%;
+    display: block;
 }
 
 /* this is the map */
@@ -74,7 +88,6 @@ body
     /* margin: 0; */
     width: 100%;
     /* border: ; */
-    
 }
 
 .flex-container
